--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Cenno-storico-sull-antichissima-citta-di-Ruvo-nella-Peucezia_69176
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69176-h/images/cover.jpg
 creator:
   author:
     agent_name: Jatta, Giovanni
     gutenberg_agent_id: '55148'
     url: http://www.gutenberg.org/2009/agents/55148
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69176#Cenno-storico-sull-antichissima-citta-di-Ruvo-nella-Peucezia
 gutenberg_issued: '2022-10-18'
 identifiers:
   gutenberg: '69176'
